@@ -390,9 +390,7 @@ class PokerAvatarTestCase(unittest.TestCase):
         avatar.handlePacketLogic(PacketPokerSeat(serial = client.getSerial(),
                                                  seat = 1, game_id = 101))
         found = 0
-        print "Packets: "
         for packet in avatar.resetPacketsQueue():
-            print packet
             if packet.type == PACKET_POKER_SEATS:
                 found += 1
                 self.assertEquals(packet.game_id, table.game.id)
@@ -422,10 +420,37 @@ class PokerAvatarTestCase(unittest.TestCase):
         d.addCallback(self.sitTable, 0)
         d.addCallback(self.quit)
         return d
+    # ------------------------------------------------------------------------
+    def forceExplain(self, (client, packet), id):
+        avatar = self.service.avatars[id]
+        table = self.service.getTable(101)
+        avatar.queuePackets()
+        avatar.handlePacketLogic(PacketPokerExplain(
+                serial = client.getSerial(), value = PacketPokerExplain.ALL))
+        found = False
+        for packet in avatar.resetPacketsQueue():
+            if packet.type == PACKET_ERROR:
+                found = True
+                self.assertEquals(packet.other_type, PACKET_POKER_EXPLAIN)
+                self.assertEquals(packet.code, 0)
+        self.assertEquals(found, True)
+        return (client, packet)
+    # ------------------------------------------------------------------------
+    def test10_explainFailsOnceAtTable(self):
+        """Tests to be sure setting explain fails when you are already
+        connected to to table."""
+        d = self.client_factory[0].established_deferred
+        d.addCallback(self.sendExplain)
+        d.addCallback(self.login, 0)
+        d.addCallback(self.joinTable, 0)
+        d.addCallback(self.sitTable, 0)
+        d.addCallback(self.forceExplain, 0)
+        d.addCallback(self.quit)
+        return d
 # ------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
-#    loader.methodPrefix = "test09"
+#    loader.methodPrefix = "test10"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerAvatarTestCase))
     return runner.TrialRunner(
